--- a/src/app/components/modals/modal.css
+++ b/src/app/components/modals/modal.css
@@ -1,35 +1,9 @@
-.modal {
-  display:  none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+.custom-register{
+  max-width: 80%  !important;
 }
-
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+.custom-askregister{
+  max-width: 80%  !important;
 }
-
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 2vw;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #0000;
-  text-decoration: none;
-  cursor: pointer;
+.custom-login{
+  max-width: 80%  !important;
 }
