--- a/src/applications/tutor/pages/dashboard.screen/dashboard.css
+++ b/src/applications/tutor/pages/dashboard.screen/dashboard.css
@@ -37,3 +37,61 @@
     visibility: visible;
     opacity: 1;
 }
+
+.icon-button {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  color: #333333;
+  background: #dddddd;
+  border: none;
+  outline: none;
+  border-radius: 50%;
+}
+
+.icon-button:hover {
+  cursor: pointer;
+}
+
+.icon-button:active {
+  background: #cccccc;
+}
+
+.icon-button__badge {
+  position: absolute;
+  top: -7px;
+  right: -7px;
+  width: 20px;
+  height: 20px;
+  background: red;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.online{
+  background-color: green;
+  position: relative;
+  top: 10%;
+  left: 5%;
+  height: 20px;
+  width: 20px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+}
+
+.offline{
+  background-color: #ce1515;
+  position: relative;
+  bottom: 15px;
+  left: 30px;
+  height: 20px;
+  width: 20px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+}
