--- a/src/applications/tutor/pages/dashboard.screen/dashboard.css
+++ b/src/applications/tutor/pages/dashboard.screen/dashboard.css
@@ -46,7 +46,7 @@
   width: 40px;
   height: 40px;
   color: #333333;
-  background: #dddddd;
+  background: #C7D0D8;
   border: none;
   outline: none;
   border-radius: 50%;
@@ -74,6 +74,19 @@
   border-radius: 50%;
 }
 
+.icon-message__badge {
+  position: relative;
+  margin: 35% 0% 0% 0%;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
 .online{
   background-color: green;
   position: relative;
@@ -84,12 +97,32 @@
   border: 3px solid #fff;
   border-radius: 50%;
 }
+.onlinetut{
+  background-color: green;
+  position: relative;
+  top: -50px;
+  left: 95%;
+  height: 15px;
+  width: 15px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+}
+.offlinetut{
+  background-color: #C7D0D8;
+  position: relative;
+  top: -50px;
+  left: 95%;
+  height: 15px;
+  width: 15px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+}
 
 .offline{
-  background-color: #ce1515;
+  background-color: #DD1B16;
   position: relative;
-  bottom: 15px;
-  left: 30px;
+  top: 10%;
+  left: 5%;
   height: 20px;
   width: 20px;
   border: 3px solid #fff;
