--- a/src/applications/supadmin/pages/dashboard.screen/dashboard.css
+++ b/src/applications/supadmin/pages/dashboard.screen/dashboard.css
@@ -25,7 +25,7 @@
     top: 100%;
     right: 60px;
     padding: 10px 20px;
-    font-size: 1vw;
+    font-size: 100%;
     background: #F8DB52;
     width: 150px;
     box-sizing: 0 5px 25px rgba(0,0,0,0.1);
