--- a/src/app/components/header/header.styles.css
+++ b/src/app/components/header/header.styles.css
@@ -3,7 +3,6 @@
     height: 50px;
     width: 100%;
     top: 0px;
-    position: fixed;
     margin-bottom: 20px;}
     .active{
         background-color: black;
@@ -11,7 +10,7 @@
     }
     .navbar-nav{
         color: #000;
-        align-items: center;
+        align-items: flex-start;
         font-family:"Grand Hotel", serif;
         width: 100%;}
 
@@ -19,13 +18,15 @@
             color: #0A38F5;
         }
         .nav-menu{
-            margin: 2%;
+            float: left;
+            margin: 3% 1% 2% 1%;
             cursor: pointer;
-            font-size: 100%;}
+            font-size: 90%;
+            display: inline-block;}
     
 
             .nav-menu:last-child{
-                margin-left: auto;
+             
             }  
             .active1{
                 color: blue;
@@ -36,6 +37,18 @@
     border-radius: 3px 3px 3px 3px;
     border: 2px solid #DD1B16;
     padding: '1px';
+}
+
+@media screen and (max-width: 739px) {
+    /* rules for small screens */
+    .displayNavItem{
+    display: "none";
+   }
+}
+@media screen and (min-width: 740px) {
+   .displayNavItem{
+    display: "flex";
+   }
 }
     
         
