--- a/src/applications/tutor/pages/dashboard.screen/dashboard.css
+++ b/src/applications/tutor/pages/dashboard.screen/dashboard.css
@@ -1,21 +1,44 @@
-.li{
-    font-size:calc(2px + 2vmin);
-    background-color: #EFEFEF;
-    margin: 3px;
-    cursor:pointer;
-    align-items: center;
+.side-content{
+    margin-bottom: 2%;
+    background-color: #c7d0d8;
+    border-radius: 15px;
+    border-bottom: 2px solid blue;
+    border-right:  2px solid blue;
+    height: 53px;
+    width: 100%;
+    cursor: pointer;
 }
-.ul{
-    margin: 15px;
+.side-content:focus{
+    background-color: red;
 }
+.side-header{
+    text-align: center;
+    margin-bottom: 5%;
+}
+.text{
+    font-size: 90%;
+    color: black;
+}
+.dash-navitem{
+    font-size: 100%;
+    text-align: center;
+    cursor: pointer;
+}
+.dash-navitem:hover{
+    border-radius: 3px 3px 3px 3px;
+    width: 100%;
+    border: 2px solid #DD1B16;
+}
+.test-class{
+    height: 45px;
+}
+
 .action .menu{
     position: absolute;
- 
-    top: 100%;
+    top: 40%;
     right: 60px;
     padding: 10px 20px;
-    font-size: 1vw;
-    background: #F8DB52;
+    background: #fff;
     width: 150px;
     box-sizing: 0 5px 25px rgba(0,0,0,0.1);
     border-radius: 15px;
@@ -36,95 +59,4 @@
 .action .menu.active{
     visibility: visible;
     opacity: 1;
-}
-
-.icon-button {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-  color: #333333;
-  background: #C7D0D8;
-  border: none;
-  outline: none;
-  border-radius: 50%;
-}
-
-.icon-button:hover {
-  cursor: pointer;
-}
-
-.icon-button:active {
-  background: #cccccc;
-}
-
-.icon-button__badge {
-  position: absolute;
-  top: -7px;
-  right: -7px;
-  width: 20px;
-  height: 20px;
-  background: red;
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-}
-
-.icon-message__badge {
-  position: relative;
-  margin: 35% 0% 0% 0%;
-  width: 20px;
-  height: 20px;
-  background: #fff;
-  color: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-}
-
-.online{
-  background-color: green;
-  position: relative;
-  top: 10%;
-  left: 5%;
-  height: 20px;
-  width: 20px;
-  border: 3px solid #fff;
-  border-radius: 50%;
-}
-.onlinetut{
-  background-color: green;
-  position: relative;
-  top: -50px;
-  left: 95%;
-  height: 15px;
-  width: 15px;
-  border: 3px solid #fff;
-  border-radius: 50%;
-}
-.offlinetut{
-  background-color: #C7D0D8;
-  position: relative;
-  top: -50px;
-  left: 95%;
-  height: 15px;
-  width: 15px;
-  border: 3px solid #fff;
-  border-radius: 50%;
-}
-
-.offline{
-  background-color: #DD1B16;
-  position: relative;
-  top: 10%;
-  left: 5%;
-  height: 20px;
-  width: 20px;
-  border: 3px solid #fff;
-  border-radius: 50%;
 }
